Fix layout problems
Footer is now at the bottom. Yay!

--- a/lop-frontend/src/index.css
+++ b/lop-frontend/src/index.css
@@ -7,6 +7,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* until we figure out how to add 'class="h-100"' too the root div*/
+#root {
+  height: 100vh;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
